# healthcare-terminology-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml  seed-all.sh  vps-docker-compose.yml
app/: main.py
app/core/: config.py  database.py  logging.py  redis.py  request_context.py  schema_utils.py
app/di/: container.py  core.py
app/di/dependencies/: terminology.py
app/di/modules/: __init__.py  terminology.py
app/errors/: handlers.py
app/middleware/: __init__.py  rate_limit.py  user_context.py
app/models/terminology/: terminology.py
app/repository/: terminology_repository.py
app/routers/: __init__.py  terminology.py
app/schemas/: terminology.py
app/services/: terminology_service.py
app/terminology/: seed_field_bindings.py  seed_field_bindings_r4.py
app/terminology/import_/: base.py  cli.py
app/terminology/import_/loaders/: fhir_r4.py  icd10cm.py  loinc.py  rxnorm.py  snomed.py
migrations/: env.py
migrations/versions/: 7791a1763d46_initial_schema.py
terminology_data/: README.md
