[project]
name = "terminology-service"
version = "0.1.0"
description = "FHIR Terminology microservice — ICD-10-CM, LOINC, RxNorm, SNOMED CT, FHIR R4 built-ins"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.31.0",
    "dependency-injector>=4.48.3",
    "fastapi[standard]>=0.129.0",
    "fhir-resources>=8.2.0",
    "orjson>=3.11.7",
    "pydantic-settings>=2.13.0",
    "redis>=7.2.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
